@@ -18,6 +18,7 @@ package com.github.benmanes.caffeine.cache;
 import static com.github.benmanes.caffeine.cache.Specifications.PACKAGE_NAME;
 import static com.github.benmanes.caffeine.cache.Specifications.kTypeVar;
 import static com.github.benmanes.caffeine.cache.Specifications.vTypeVar;
+import static com.google.common.base.Preconditions.checkState;
 import static com.google.common.collect.ImmutableList.toImmutableList;
 import static java.nio.charset.StandardCharsets.UTF_8;
 import static java.util.Objects.requireNonNull;
@@ -25,7 +26,6 @@ import static java.util.Objects.requireNonNull;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.time.Year;
 import java.time.ZoneId;
 import java.util.ArrayList;
@@ -34,6 +34,7 @@ import java.util.List;
 import java.util.NavigableMap;
 import java.util.Set;
 import java.util.TreeMap;
+import java.util.spi.ToolProvider;
 import java.util.stream.Stream;
 
 import com.github.benmanes.caffeine.cache.node.AddConstructors;
@@ -53,13 +54,11 @@ import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Iterables;
 import com.google.common.collect.Sets;
 import com.google.common.io.Resources;
-import com.google.googlejavaformat.java.Formatter;
-import com.google.googlejavaformat.java.FormatterException;
-import com.squareup.javapoet.ClassName;
-import com.squareup.javapoet.JavaFile;
-import com.squareup.javapoet.ParameterizedTypeName;
-import com.squareup.javapoet.TypeName;
-import com.squareup.javapoet.TypeSpec;
+import com.palantir.javapoet.ClassName;
+import com.palantir.javapoet.JavaFile;
+import com.palantir.javapoet.ParameterizedTypeName;
+import com.palantir.javapoet.TypeName;
+import com.palantir.javapoet.TypeSpec;
 
 /**
  * Generates the cache entry's specialized type. These entries are optimized for the configuration
@@ -76,7 +75,6 @@ import com.squareup.javapoet.TypeSpec;
  *
  * @author ben.manes@gmail.com (Ben Manes)
  */
-@SuppressWarnings("PMD.AvoidDuplicateLiterals")
 public final class NodeFactoryGenerator {
   private final List<NodeRule> rules = List.of(new AddSubtype(), new AddConstructors(),
       new AddKey(), new AddValue(), new AddMaximum(), new AddExpiration(), new AddDeques(),
@@ -86,13 +84,12 @@ public final class NodeFactoryGenerator {
   private final List<TypeSpec> nodeTypes;
   private final Path directory;
 
-  @SuppressWarnings("NullAway.Init")
   private NodeFactoryGenerator(Path directory) {
     this.directory = requireNonNull(directory);
     this.nodeTypes = new ArrayList<>();
   }
 
-  private void generate() throws FormatterException, IOException {
+  private void generate() throws IOException {
     generatedNodes();
     writeJavaFile();
     reformat();
@@ -100,35 +97,37 @@ public final class NodeFactoryGenerator {
 
   private void writeJavaFile() throws IOException {
     String header = Resources.toString(Resources.getResource("license.txt"), UTF_8).trim();
-    ZoneId timeZone = ZoneId.of("America/Los_Angeles");
+    var timeZone = ZoneId.of("America/Los_Angeles");
     for (TypeSpec node : nodeTypes) {
       JavaFile.builder(getClass().getPackage().getName(), node)
           .addFileComment(header, Year.now(timeZone))
+          .skipJavaLangImports(true)
           .indent("  ")
           .build()
           .writeTo(directory);
     }
   }
 
-  private void reformat() throws FormatterException, IOException {
+  @SuppressWarnings("SystemOut")
+  private void reformat() throws IOException {
     if (Boolean.parseBoolean(System.getenv("JDK_EA"))) {
       return; // may be incompatible for EA builds
     }
     try (Stream<Path> stream = Files.walk(directory)) {
-      ImmutableList<Path> files = stream
-          .filter(path -> path.toString().endsWith(".java"))
+      ImmutableList<String> files = stream
+          .map(Path::toString)
+          .filter(path -> path.endsWith(".java"))
           .collect(toImmutableList());
-      var formatter = new Formatter();
-      for (Path file : files) {
-        String source = Files.readString(file);
-        String formatted = formatter.formatSourceAndFixImports(source);
-        Files.writeString(file, formatted);
-      }
+      ToolProvider.findFirst("google-java-format").ifPresent(formatter -> {
+        int result = formatter.run(System.out, System.err,
+            Stream.concat(Stream.of("-i"), files.stream()).toArray(String[]::new));
+        checkState(result == 0, "Java formatting failed with %s exit code", result);
+      });
     }
   }
 
   private void generatedNodes() {
-    NavigableMap<String, Set<Feature>> classNameToFeatures = getClassNameToFeatures();
+    NavigableMap<String, ImmutableSet<Feature>> classNameToFeatures = getClassNameToFeatures();
     classNameToFeatures.forEach((className, features) -> {
       String higherKey = classNameToFeatures.higherKey(className);
       boolean isLeaf = (higherKey == null) || !higherKey.startsWith(className);
@@ -137,8 +136,8 @@ public final class NodeFactoryGenerator {
     });
   }
 
-  private NavigableMap<String, Set<Feature>> getClassNameToFeatures() {
-    var classNameToFeatures = new TreeMap<String, Set<Feature>>();
+  private NavigableMap<String, ImmutableSet<Feature>> getClassNameToFeatures() {
+    var classNameToFeatures = new TreeMap<String, ImmutableSet<Feature>>();
     for (List<Object> combination : combinations()) {
       var features = getFeatures(combination);
       var className = Feature.makeClassName(features);
@@ -147,6 +146,7 @@ public final class NodeFactoryGenerator {
     return classNameToFeatures;
   }
 
+  @SuppressWarnings("SetsImmutableEnumSetIterable")
   private ImmutableSet<Feature> getFeatures(List<Object> combination) {
     var features = new LinkedHashSet<Feature>();
     features.add((Feature) combination.get(0));
@@ -159,33 +159,37 @@ public final class NodeFactoryGenerator {
     if (features.contains(Feature.MAXIMUM_WEIGHT)) {
       features.remove(Feature.MAXIMUM_SIZE);
     }
+    // In featureByIndex order for class naming
     return ImmutableSet.copyOf(features);
   }
 
-  @SuppressWarnings("NullAway")
-  private TypeSpec makeNodeSpec(String className, boolean isFinal, Set<Feature> features) {
+  @SuppressWarnings("SetsImmutableEnumSetIterable")
+  private TypeSpec makeNodeSpec(String className, boolean isFinal, ImmutableSet<Feature> features) {
     TypeName superClass;
-    Set<Feature> parentFeatures;
-    Set<Feature> generateFeatures;
+    ImmutableSet<Feature> parentFeatures;
+    ImmutableSet<Feature> generateFeatures;
     if (features.size() == 2) {
-      parentFeatures = Set.of();
+      parentFeatures = ImmutableSet.of();
       generateFeatures = features;
-      superClass = TypeName.OBJECT;
+      superClass = ClassName.OBJECT;
     } else {
+      // Requires that parentFeatures is in featureByIndex order for super class naming
       parentFeatures = ImmutableSet.copyOf(Iterables.limit(features, features.size() - 1));
-      generateFeatures = ImmutableSet.of(Iterables.getLast(features));
+      generateFeatures = Sets.immutableEnumSet(features.asList().get(features.size() - 1));
       superClass = ParameterizedTypeName.get(ClassName.get(PACKAGE_NAME,
           encode(Feature.makeClassName(parentFeatures))), kTypeVar, vTypeVar);
     }
 
     var context = new NodeContext(superClass, className, isFinal, parentFeatures, generateFeatures);
     for (NodeRule rule : rules) {
-      rule.accept(context);
+      if (rule.applies(context)) {
+        rule.execute(context);
+      }
     }
-    return context.nodeSubtype.build();
+    return context.build();
   }
 
-  private Set<List<Object>> combinations() {
+  private static Set<List<Object>> combinations() {
     var keyStrengths = Set.of(Feature.STRONG_KEYS, Feature.WEAK_KEYS);
     var valueStrengths = Set.of(Feature.STRONG_VALUES, Feature.WEAK_VALUES, Feature.SOFT_VALUES);
     var expireAfterAccess = Set.of(false, true);
@@ -214,7 +218,7 @@ public final class NodeFactoryGenerator {
         .replaceFirst("_SIZE", "S");
   }
 
-  public static void main(String[] args) throws FormatterException, IOException {
-    new NodeFactoryGenerator(Paths.get(args[0])).generate();
+  public static void main(String[] args) throws IOException {
+    new NodeFactoryGenerator(Path.of(args[0])).generate();
   }
 }
